# irish-name-pronouncer

./: .gitignore  .pdm-python  README.md  app.py  index.html  pyproject.toml
src/irish_name_pronouncer/: api.py
tests/: run_test.py
